--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -10,19 +10,6 @@ categories:
   - autoregressive models
   - time series
 keywords: 
-  - time series
-  - stationarity
-  - strong stationarity
-  - weak stationarity
-  - lag
-  - autocorrelation function (ACF)
-  - partial autocorrelation function (PACF)
-  - smoothing
-  - trend
-  - seasonality
-  - differencing operator
-  - back shift operator
-  - moving average
   - AR(1) process
   - Yule-Walker equations
   - Durbin-Levinson recursion
@@ -36,16 +23,22 @@ format:
         css: styles.css
 ---
 
+::: {.callout-note collapse="true"}
+## Learning Objectives
+
+-   [x] Define the zero-mean autoregressive process of order one or AR(1) and use R to obtain samples from this type of process
+-   [x] Perform maximum likelihood estimation for the full and conditional likelihood in an AR(1)
+:::
 
 We will next introduce the autoregressive process of order one, or AR(1) process, which is a fundamental model in time series analysis. We will discuss the definition of the AR(1) process, its properties, and how to simulate data from an AR(1) process.
 
 ### The AR(1) process (video)
 
 
-![AR(1)](images/m1_0031.png){.column-margin  group="slides" width="53mm"}
+![AR(1)](images/m1_0031.png){#fig-c4l3-s1 .column-margin  group="slides" width="53mm"}
 
 
-![AR(1) properties](images/m1_0032.png){.column-margin  group="slides" width="53mm"}
+![AR(1) properties](images/m1_0032.png){#fig-c4l3-s2 .column-margin  group="slides" width="53mm"}
 
 
 ### The PACF of the AR(1) process (reading)
