--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -12,17 +12,6 @@ categories:
 keywords: 
   - time series
   - stationarity
-  - strong stationarity
-  - weak stationarity
-  - lag
-  - autocorrelation function (ACF)
-  - partial autocorrelation function (PACF)
-  - smoothing
-  - trend
-  - seasonality
-  - differencing operator
-  - back shift operator
-  - moving average
   - AR(1) process
   - Yule-Walker equations
   - Durbin-Levinson recursion
@@ -36,7 +25,12 @@ format:
         css: styles.css
 ---
 
+::: {.callout-note collapse="true"}
+## Learning Objectives
 
+-   [x] Perform Bayesian inference for the **AR(1)** under the conditional likelihood and the reference prior
+
+:::
 ## Review of maximum likelihood and Bayesian inference in regression
 
 ### Regression Models: Maximum Likelihood Estimation
